fixed styling for most pages so header/footer are at top/bottom by stretching the content with flex 1 1

--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,11 @@ nav {
   align-items: center;
   justify-content: center;
   padding: 0 1rem;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 1000;
+  margin-bottom: 2rem;
 }
 
 nav a {
@@ -63,29 +64,39 @@ nav a.active {
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 1rem;
-  position: fixed;
+  padding: 0 1rem;
+  position: relative;
   bottom: 0;
   width: 100%;
   z-index: 1000;
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footContainer a {
   color: white;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1.5rem;
   font-weight: bold;
 }
 
 .footContainer a:hover {
-  background-color: #555;
+  background-color: grey;
 }
 
 .footContainer a.active {
-  background-color: #222;
+  background-color: black;
 }
 
 /* ItemList */
+.itemListSection {
+  display: flex;
+  flex-flow: column wrap;
+  flex: 1 1 auto;
+}
+
 .itemsList {
   display: flex;
   flex-wrap: wrap;
@@ -104,6 +115,14 @@ nav a.active {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
+}
+
+.itemDetail {
+  border: 1px solid #ddd;
+  padding: 2rem;
+  max-width: 80vw;
+  margin: 2rem auto;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .itemCard {
@@ -157,7 +176,7 @@ nav a.active {
 
 .itemPrice {
   font-weight: bold;
-  color: #b30000;
+  color: blue;
 }
 
 .itemBuyButton {
@@ -166,7 +185,7 @@ nav a.active {
 }
 
 .itemBuyButton button {
-  background-color: #b30000;
+  background-color: blue;
   color: white;
   border: none;
   padding: 0.75rem 1.5rem;
@@ -236,15 +255,20 @@ nav a.active {
   display: flex;
   justify-content: center;
   align-content: center;
+  align-items: center;
+  flex-flow: column wrap;
   border: 0.1rem solid black;
   border-radius: 0.25rem;
   padding: 0.5rem 0.8rem;
   margin: 1rem;
+  width: 25vw;
 }
 
 .formSection {
   display: flex;
-  justify-content: center;
+  flex-flow: column nowrap;
+  align-items: center;
+  flex: 1 1 auto;
 }
 
 form {
